--- a/src/style/pages/animation_main.css
+++ b/src/style/pages/animation_main.css
@@ -75,3 +75,56 @@
         width: 100%;
     }
 }
+
+
+
+/*@keyframes moveBefore {*/
+/*    0%, 100% {*/
+/*        transform: translate(0, 0);*/
+/*    }*/
+/*    25% {*/
+/*        transform: translate(25%, 25%);*/
+/*    }*/
+/*    50% {*/
+/*        transform: translate(50%, 50%);*/
+/*    }*/
+/*    75% {*/
+/*        transform: translate(100%, 100%);*/
+/*    }*/
+/*}*/
+
+/*@keyframes moveBefore {*/
+/*    0%, 100% {*/
+/*        transform: translate(0, 0);*/
+/*    }*/
+/*    50% {*/
+/*        transform: translate(100%, 100%);*/
+/*    }*/
+/*}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
